[package]
name = "mock-red-bank"
version = "1.0.0"
edition = "2021"
repository = "https://github.com/mars-protocol/rover"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
mars-outpost = { version = "0.1", path = "../../packages/outpost" }

cosmwasm-schema = "1.1"
cosmwasm-std = "1.1"
cw-storage-plus = "0.14"
schemars = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
